Report Designer Tab changes
